--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body style="font-family: Inter, sans-serif; background:#0F172A; color:#E2E8F0;">
   <div id="root">Loading Trading Strategy Studio...</div>
-  <!-- ÖNEMLİ: sadece kaynak dosyayı işaret et -->
+  <!-- ÖNEMLİ: sadece kaynak dosya -->
   <script type="module" src="/src/main.jsx"></script>
 </body>
 </html>
